// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatorPopup component CreatorPopup renders popup 1`] = `
<div
  className="popup"
>
  <div
    className="popup-inner"
  >
    <form
      className="title-container"
      onSubmit={[MockFunction]}
    >
      <label
        htmlFor="name-popup"
      >
        <strong>
          Give your Spreadsheet widget a title
        </strong>
      </label>
      <input
        autoFocus={true}
        className="popup-input"
        id="name-popup"
        onChange={[MockFunction]}
        placeholder="My Spreadsheet Widget"
        required="required"
        type="text"
        value="tock-mitle"
      />
      <input
        className="popup-submit"
        type="submit"
        value="Done"
      />
    </form>
  </div>
</div>
`;

exports[`CreatorPopup component CreatorPopup renders popup with intro 1`] = `
<div
  className="popup"
>
  <div
    className="popup-inner"
  >
    <form
      className="title-container"
      onSubmit={[MockFunction]}
    >
      <label
        htmlFor="name-popup"
      >
        <strong>
          Give your Spreadsheet widget a title
        </strong>
      </label>
      <input
        autoFocus={true}
        className="popup-input"
        id="name-popup"
        onChange={[MockFunction]}
        placeholder="My Spreadsheet Widget"
        required="required"
        type="text"
        value="mock-title"
      />
      <input
        className="popup-submit"
        type="submit"
        value="Done"
      />
    </form>
  </div>
</div>
`;
